Fix z-index nominee card

--- a/src/styles/_contest.scss
+++ b/src/styles/_contest.scss
@@ -86,6 +86,7 @@
     }
     .user-container {
       flex: auto;
+      z-index: auto;
       // height: 222px;
     }
     .top-votes-container {
